<resources>
    <string name="app_name">TVDApp</string>

    // Home Turnover
    <string name="today_title">Hôm nay</string>
    <string name="turnover_title">Doanh thu</string>
    <string name="order_title">Đơn hàng</string>
    <string name="profit_title">Lợi nhuận</string>
    <string name="turnover_report_title">Báo cáo lãi lỗ</string>

    // Home Service
    <string name="create_order_title">Tạo đơn</string>
    <string name="order_service_title">Đơn hàng</string>
    <string name="product_title">Sản phẩm</string>
    <string name="report_title">Báo cáo</string>
    <string name="more_title">Xem thêm</string>
    <string name="warehouse_title">Kho hàng</string>

    // Home Order
    <string name="all_title">Tất cả</string>
    <string name="waiting_title">Chờ xác nhận</string>
    <string name="processing_title">Đang xử lý</string>
    <string name="delivered_title">Đã giao</string>

    // Order Product
    <string name="order_activity_title">Bán hàng</string>
    <string name="cart_continue_title">Tiếp tục</string>

    // Confirm Order
    <string name="confirm_order_activity_title">Xác nhận đơn hàng</string>
    <string name="confirm_order_add_items">+ Thêm sản phẩm</string>
    <string name="confirm_order_choose_discount">Chọn khuyến mãi</string>
    <string name="confirm_order_choose_money_payment_methods">Tiền mặt</string>
    <string name="confirm_order_note">Ghi chú</string>
    <string name="confirm_order_note_placeholder">Chú thích đơn hàng</string>
    <string name="confirm_order_customer_name">Tên người nhận</string>
    <string name="confirm_order_address">Địa chỉ</string>
    <string name="confirm_order_customer_name_placeholder">Nhập tên</string>
    <string name="confirm_order_address_placeholder">Nhập địa chỉ</string>
    <string name="confirm_order_promotion">Khuyến mãi</string>
    <string name="confirm_order_price">Giá tiền</string>
    <string name="confirm_order_discount">Giảm giá</string>
    <string name="confirm_order_transition_fee">Phí vận chuyển</string>
    <string name="confirm_order_total">Tổng thanh toán</string>
    <string name="confirm_order_payment_methods">Phương thức thanh toán</string>
    <string name="confirm_order_delivery_later">Giao sau</string>
    <string name="confirm_order_quick_sell">Bán nhanh</string>

    // Order Manager
    <string name="order_manager_paid">Đã thanh toán</string>
    <string name="order_manager_unpaid">Chưa thanh toán</string>
    <string name="order_manager_total">Tổng cộng</string>
    <string name="order_manager_no_customer_name">Khách lẻ</string>
    <string name="order_manager_cancel">Huỷ bỏ</string>

    // Order Details
    <string name="order_details_title">Chi tiết hoá đơn</string>
    <string name="order_details_cancel">Hủy</string>
    <string name="order_details_delivered">Đã giao</string>
    <string name="order_details_send_invoice">Gửi hóa đơn</string>
    <string name="order_details_total_product">Tổng 1 sản phẩm</string>
    <string name="order_details_discount">Khuyến mãi</string>
    <string name="order_details_VAT">Thuế VAT</string>


    //User
    <string name="register_login_info">THÔNG TIN ĐĂNG NHẬP</string>
    <string name="register_user_info">THÔNG TIN CÁ NHÂN</string>
    <string name="register_account_name">Tên tài khoản <font color="#FF0707">*</font></string>
    <string name="register_pass">Mật khẩu</string>
    <string name="register_pass_again">Xác nhận mật khẩu</string>
    <string name="register_employee_name">Họ tên nhân viên <font color="#FF0707">*</font></string>
    <string name="register_gender">Giới tính</string>
    <string name="register_position">Chức vụ <font color="#FF0707">*</font></string>
    <string name="register_area">Khu vực</string>
    <string name="register_CCCD">CCCD</string>
    <string name="register_phone">SĐT</string>
    <string name="register_address">Địa chỉ</string>
    <string name="register_cancel">HỦY</string>
    <string name="register_register">ĐĂNG KÝ</string>
    <string name="user_manager_title">Quản lý</string>
    <string name="user_employee_title">Nhân viên</string>
    <string name="user_male_title">Nam</string>
    <string name="user_female_title">Nữ</string>

    // Product
    <string name="product_activity_title">Quản lý sản phẩm</string>
    <string name="product_amount_description">Kho</string>
    <string name="search_product_hint">Search by name</string>

    // Edit Product
    <string name="edit_product_activity_title">Chi tiết sản phẩm</string>
    <string name="add_product_activity_title">Tạo sản phẩm</string>
    <string name="edit_product_remove">Xoá</string>
    <string name="edit_product_update">Cập nhập</string>
    <string name="edit_product_done">Hoàn tất</string>
    <string name="edit_product_clear">Hoàn tác</string>
    <string name="edit_product_name">
        <font color="#0B132B">Tên sản phẩm </font><font color="#FF0707">*</font>
    </string>
    <string name="edit_product_price">
        <font color="#0B132B">Giá bán </font><font color="#FF0707">*</font>
    </string>
    <string name="edit_product_cost_price">
        <font color="#0B132B">Giá vốn </font><font color="#FF0707">*</font>
    </string>

    // Warehouse
    <string name="warehouse_activity_title">Kho hàng</string>
    <string name="warehouse_import_product">Nhập hàng</string>
    <string name="warehouse_export_product">Xuất hàng</string>
    <string name="warehouse_existential_value">Giá trị tồn</string>
    <string name="warehouse_products_count">Số lượng</string>
    <string name="warehouse_product_code">mã sản phẩm</string>
    <string name="warehouse_inventory">Tồn kho</string>
    <string name="warehouse_import_product_book">Sổ nhập hàng</string>

    // Confirm Import Product
    <string name="confirm_import_product_activity_title">Tạo nhập hàng</string>
    <string name="confirm_import_payment">Thanh toán</string>
    <string name="confirm_import_payment_later">Trả sau</string>
    <string name="confirm_import_product_supplier">
        <font color="#0B132B">Nhà cung cấp </font><font color="#FF0707">*</font>
    </string>
    <string name="confirm_import_product_discount">Chiết khấu</string>
    <string name="confirm_import_product_total_money">Tổng tiền hàng</string>
    <string name="confirm_import_product_total_amount">Tổng số lượng</string>
    <string name="confirm_import_product_costs_incurred">Chi phí phát sinh</string>

</resources>